fixed some problems
added new condition
added inversion of simple bind reactions
ready for multi use